patchpanel: Enable NIC hotplug
This CL switches patchpanel to hotplug NIC to ARCVM instead of using a
pool of static NICs for x86_64 devices.

BUG=b:294777126
TEST=cros_run_unit_tests --board guybrush-arc-t --packages patchpanel
TEST=manual feature tests
TEST=tast run ${DUT} network.ARCVPN*
TEST=tast run ${DUT} network.ARCToHostVPN
TEST=tast run ${DUT} network.ARCMultiNetwork*

Change-Id: I5aef1e12273d7c9ce6923cfb1cba9d4b55a59f6e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5096163
Reviewed-by: Jason Iman <jasongustaman@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Ningyuan Wang <ningyuan@google.com>
Tested-by: Ningyuan Wang <ningyuan@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -125,6 +125,13 @@ shared_library("libpatchpanel-util") {
 }
 
 static_library("libpatchpanel") {
+  # NIC hotplug is only enabled on ARCVM with x86_64 architecture.
+  if (use.amd64 && use.arcvm) {
+    nic_hotplug = true
+  } else {
+    nic_hotplug = false
+  }
+
   sources = [
     "adb_proxy.cc",
     "arc_service.cc",
@@ -167,7 +174,10 @@ static_library("libpatchpanel") {
   ]
   configs += [ ":target_defaults" ]
   cflags = [ "-Wconversion" ]
-  defines = [ "USE_ARCVM=${use.arcvm}" ]
+  defines = [
+    "USE_ARCVM=${use.arcvm}",
+    "USE_ARCVM_NIC_HOTPLUG=${nic_hotplug}",
+  ]
 
   # Workaround for b/266863330: disable PCH when the user generates
   # compilation database for an editor.
