crash: Collect hibernate logs and the status of DM snapshots on mount failures
Collect hiberman logs and the status of DM snapshots on mount
failures of stateful or cryptohome.

Change the 'hiberman' command to use croslog and only capture
the logs since the last boot to make the command useful for
situations other than hiberman crashes. This involves dropping
the 'hibernation' kernel logs, in any case these are not
essential for debugging.

Only collect the hiberman logs if hibernate is actually
available on a system. The command can be invoked by the
mount failure collector (and potentially others) on systems
without hibernate support.

Remove the 'kernel-warning' command from the mount failure
collector to avoid redundant logs, dmesg output is also
captured by the 'hiberman' command.

BUG=b:309001479
TEST=emerge-${BOARD} crash-reporter
  manual test of dm_snapshot_status and hibernate commands

Cq-Depend: chromium:5147076
Change-Id: I7945c261554b738633714adddfc0e4c441fac77b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5105077
Commit-Queue: Matthias Kaehlcke <mka@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Tested-by: Matthias Kaehlcke <mka@chromium.org>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -844,12 +844,23 @@ thinpool_migrator=\
   tail -n 100 /tmp/vgcfgrestore.txt; \
   echo EOF
 
+# Hibernate related logs. Only collect the hiberman logs when the
+# binary exists. The command can be invoked on systems without
+# hibernate support. The dmesg output is still desirable in this
+# case.
 hiberman=\
-  echo "===/var/log/messages==="; \
-  tail -n 1000 /var/log/messages | grep -E "(hiberman|hibernation)" | \
-    grep -v nosave | tail -n 50; \
+  if [ -e /usr/sbin/hiberman ]; then \
+    echo "===syslog (hiberman)==="; \
+    croslog --boot --identifier=hiberman; \
+  fi; \
   echo "===dmesg==="; \
-  dmesg | tail -n 50; \
+  dmesg | tail -n 100; \
+  echo EOF
+
+# Status of device mapper snapshots.
+dm_snapshot_status=\
+  echo "===DM snapshot status==="; \
+  dmsetup status | grep snapshot; \
   echo EOF
 
 # Debugging information for udev crashes.
