lvmd: Expose multi LV APIs
.. for Create/Remove on multi LVs.

This save numerous DBus calls being made into the lvmd service.
Newer usages options:
  1. --create --lvs --lv_names ... --sizes ... ...
  2. --remove --lvs --lv_names ...

$> lvmd_client --create --lvs --lv_names=zfoods,zfoobar,zleet,zelf --sizes=5,10,15,20 --vg_name=4BM5BRJQ9SH1BJF8 --thinpool_name=thinpool
{
   "logical_volume_list": [ {
      "logical_volume": {
         "name": "zfoods",
         "path": "/dev/4BM5BRJQ9SH1BJF8/zfoods"
      }
   }, {
      "logical_volume": {
         "name": "zfoobar",
         "path": "/dev/4BM5BRJQ9SH1BJF8/zfoobar"
      }
   }, {
      "logical_volume": {
         "name": "zleet",
         "path": "/dev/4BM5BRJQ9SH1BJF8/zleet"
      }
   }, {
      "logical_volume": {
         "name": "zelf",
         "path": "/dev/4BM5BRJQ9SH1BJF8/zelf"
      }
   } ]
}
$> lvs
  LV                        VG               Attr       LSize    Pool     Origin Data%  Meta%  Move Log Cpy%Sync Convert
  ...
  encstateful               4BM5BRJQ9SH1BJF8 Vwi-aot---  128.49g thinpool        2.44
  hibermeta                 4BM5BRJQ9SH1BJF8 Vwi---t---   16.00m thinpool
  thinpool                  4BM5BRJQ9SH1BJF8 twi-aot---  459.18g                 4.17   0.52
  unencrypted               4BM5BRJQ9SH1BJF8 Vwi-aot--- <436.23g thinpool        2.89
  zelf                      4BM5BRJQ9SH1BJF8 Vwi-a-t---   20.00m thinpool        0.00
  zfoobar                   4BM5BRJQ9SH1BJF8 Vwi-a-t---   12.00m thinpool        0.00
  zfoods                    4BM5BRJQ9SH1BJF8 Vwi-a-t---    8.00m thinpool        0.00
  zleet                     4BM5BRJQ9SH1BJF8 Vwi-a-t---   16.00m thinpool        0.00
$> lvmd_client --remove --lvs --lv_names=zfoods,zfoobar,zleet,zelf --vg_name=4BM5BRJQ9SH1BJF8 --thinpool_name=thinpool=thinpool
$>  lvs
  LV                        VG               Attr       LSize    Pool     Origin Data%  Meta%  Move Log Cpy%Sync Convert
  ...
  encstateful               4BM5BRJQ9SH1BJF8 Vwi-

--- a/lvmd/BUILD.gn
+++ b/lvmd/BUILD.gn
@@ -14,6 +14,9 @@ group("all") {
     ":lvmd",
     ":lvmd_client",
   ]
+  if (use.test) {
+    deps += [ ":lvmd_tests" ]
+  }
 }
 
 pkg_config("target_defaults") {
@@ -40,13 +43,18 @@ generate_dbus_adaptors("lvmd_dbus_adaptors") {
   sources = [ "dbus/org.chromium.Lvmd.xml" ]
 }
 
-executable("lvmd") {
-  sources = [
-    "lvmd.cc",
-    "main.cc",
-  ]
+static_library("liblvmd") {
+  sources = [ "lvmd.cc" ]
   configs += [ ":target_defaults" ]
-  deps = [ ":lvmd_dbus_adaptors" ]
+}
+
+executable("lvmd") {
+  sources = [ "main.cc" ]
+  configs += [ ":target_defaults" ]
+  deps = [
+    ":liblvmd",
+    ":lvmd_dbus_adaptors",
+  ]
   install_path = "sbin"
 }
 
@@ -73,4 +81,28 @@ executable("lvmd_client") {
   ]
   deps = [ ":lvmd_dbus_adaptors" ]
   install_path = "sbin"
+}
+
+# For test:
+if (use.test) {
+  pkg_config("lvmd_tests_config") {
+    pkg_deps = [
+      "libbrillo-test",
+      "libchrome-test",
+    ]
+  }
+
+  executable("lvmd_tests") {
+    sources = [ "lvmd_test.cc" ]
+    configs += [
+      "//common-mk:test",
+      ":lvmd_tests_config",
+      ":target_defaults",
+    ]
+    run_test = true
+    deps = [
+      ":liblvmd",
+      "//common-mk/testrunner",
+    ]
+  }
 }
