libhwsec: add RoDataTpm1
We would like to read the EK cert from tpm1 for attestation purpose.

Since the EK cert is read-only, we should introduce RoData for TPM1.2 so
that we can read the EK cert on TPM1.2 device.

BUG=b:278988633
TEST=unittest

Change-Id: I7ab5f84f8d6b7a1b6c4b37bc011ea894ca68634c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5266724
Tested-by: Ching-Kang Yen <chingkang@chromium.org>
Commit-Queue: Ching-Kang Yen <chingkang@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>

--- a/libhwsec/BUILD.gn
+++ b/libhwsec/BUILD.gn
@@ -331,6 +331,7 @@ source_set("hardware_abstraction_internal_library") {
       "backend/tpm1/pinweaver.cc",
       "backend/tpm1/random.cc",
       "backend/tpm1/recovery_crypto.cc",
+      "backend/tpm1/ro_data.cc",
       "backend/tpm1/sealing.cc",
       "backend/tpm1/signature_sealing.cc",
       "backend/tpm1/signing.cc",
@@ -538,6 +539,7 @@ if (use.test) {
         "backend/tpm1/pinweaver_test.cc",
         "backend/tpm1/random_test.cc",
         "backend/tpm1/recovery_crypto_test.cc",
+        "backend/tpm1/ro_data_test.cc",
         "backend/tpm1/sealing_test.cc",
         "backend/tpm1/signature_sealing_test.cc",
         "backend/tpm1/signing_test.cc",
