ml: allow ml service to read hidraw data
This is required by the heatmap palm rejection module, and it is
approved by security in go/cros-hidraw-ml.

BUG=b:315720763
TEST=emerge-$BOARD ml && cros deploy rex ml and verified on Rex proto

Change-Id: If5791605f4b926a797a7bbfe6b13f21f02770fa2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5113659
Commit-Queue: Jing Wang <jiwan@chromium.org>
Reviewed-by: Andrew Moylan <amoylan@chromium.org>
Tested-by: Jing Wang <jiwan@chromium.org>

--- a/ml/init/ml-service.conf
+++ b/ml/init/ml-service.conf
@@ -61,6 +61,15 @@ script
     # The uid/gid 20177 is for bootstrapping DBus connection because DBus
     # requires the process connecting to it to have the same euid inside and
     # outside of the userns.
+    # The gid 403 is for reading hidraw devices.
+    # Mount hidraw devices if there are any.
+    hidraw_paths="/dev/hidraw*"
+    set --
+    if ls $hidraw_paths 1> /dev/null 2>&1; then
+      for file in $hidraw_paths; do
+        set -- "$@" -b "$file"
+      done
+    fi
     exec minijail0 -n -p -l -r -v -N -i -I --uts -Kslave \
       --profile=minimalistic-mountns \
       --no-fs-restrictions \
@@ -72,8 +81,11 @@ script
       -b /run/dbus \
       -b /var/lib/ml_service,,1 \
       -b /var/lib/metrics,,1 \
-      -- /sbin/minijail0 -Kslave -U -I -v -M"0 20106 1,20177 20177 1" \
+      "$@" \
+      -- /sbin/minijail0 -Kslave -U -I -v \
+        -M"0 20106 1,20177 20177 1,403 403 1" \
         -m"0 20106 1,20177 20177 1" \
+        --add-suppl-group hidraw \
         -k 'proc,/proc,proc,MS_NOSUID|MS_NODEV|MS_NOEXEC|MS_RDONLY' \
         -S /usr/share/policy/ml_service-seccomp.policy \
         -- /usr/bin/ml_service --task=mojo_service
