shill: Move NetworkApplier to patchpanel
NetworkApplier's subsidiaries (AddressService, RoutingTable,
RoutingPolicyService) are also moved together.

BUG=b:293997937
TEST=unit for patchpanel-client, patchpanel, shill
TEST=tast run ${DUT} network.Routing*
TEST=tast run ${DUT} network.VPNRouting*

Change-Id: I43d2467c2f40aaee1846cf3ac634f147151e304e
Disallow-Recycled-Builds: test-failures
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5116861
Tested-by: Taoyu Li <taoyl@chromium.org>
Commit-Queue: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -146,6 +146,11 @@ static_library("libpatchpanel") {
     "multicast_metrics.cc",
     "multicast_proxy.cc",
     "ndproxy.cc",
+    "network/address_service.cc",
+    "network/network_applier.cc",
+    "network/routing_policy_service.cc",
+    "network/routing_table.cc",
+    "network/routing_table_entry.cc",
     "network_monitor_service.cc",
     "patchpanel_adaptor.cc",
     "patchpanel_daemon.cc",
@@ -315,6 +320,12 @@ if (use.test) {
       "multicast_metrics_test.cc",
       "ndproxy_test.cc",
       "net_util_test.cc",
+      "network/mock_network_applier.cc",
+      "network/mock_routing_policy_service.cc",
+      "network/mock_routing_table.cc",
+      "network/network_applier_test.cc",
+      "network/routing_policy_service_test.cc",
+      "network/routing_table_test.cc",
       "network_monitor_service_test.cc",
       "proto_utils_test.cc",
       "qos_service_test.cc",
