libtouchraw: Add a parser class and unit tests
This class is to parse heatmap chunks.

BUG=b:275615824
TEST=emerge-rex libtouchraw succeeded and manually test it on a rex
device

Change-Id: I2ecb01a1feb5b178fa419185a31efdbf69e51d18
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4834096
Auto-Submit: Jingyuan Liang <jingyliang@chromium.org>
Reviewed-by: Rob Schonberger <robsc@chromium.org>
Tested-by: Jingyuan Liang <jingyliang@chromium.org>
Reviewed-by: Henry Barnor <hbarnor@chromium.org>
Commit-Queue: Jingyuan Liang <jingyliang@chromium.org>

--- a/libtouchraw/BUILD.gn
+++ b/libtouchraw/BUILD.gn
@@ -25,7 +25,10 @@ pkg_config("target_defaults_pkg_deps") {
 }
 
 shared_library("libtouchraw") {
-  sources = [ "reader.cc" ]
+  sources = [
+    "parser.cc",
+    "reader.cc",
+  ]
   configs += [ ":target_defaults_pkg_deps" ]
   install_path = "lib"
 }
@@ -52,7 +55,10 @@ generate_pkg_config("libtouchraw_pc") {
 
 if (use.test) {
   executable("libtouchraw_test") {
-    sources = [ "reader_test.cc" ]
+    sources = [
+      "parser_test.cc",
+      "reader_test.cc",
+    ]
     configs += [
       "//common-mk:test",
       ":target_defaults_pkg_deps",
