libtouchraw: Add a defragmenter class and unit tests
This class is to defragment heatmap data.

BUG=b:275615824
TEST=emerge-rex libtouchraw succeeded and manually test it on a rex
device

Change-Id: I370620cf918a3da6a237adda7e1ba2bd1bc4215e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4834097
Tested-by: Jingyuan Liang <jingyliang@chromium.org>
Reviewed-by: Kenneth Albanowski <kenalba@google.com>
Reviewed-by: Henry Barnor <hbarnor@chromium.org>
Reviewed-by: Rob Schonberger <robsc@google.com>
Auto-Submit: Jingyuan Liang <jingyliang@chromium.org>
Commit-Queue: Jingyuan Liang <jingyliang@chromium.org>

--- a/libtouchraw/BUILD.gn
+++ b/libtouchraw/BUILD.gn
@@ -26,6 +26,7 @@ pkg_config("target_defaults_pkg_deps") {
 
 shared_library("libtouchraw") {
   sources = [
+    "defragmenter.cc",
     "parser.cc",
     "reader.cc",
   ]
@@ -56,6 +57,7 @@ generate_pkg_config("libtouchraw_pc") {
 if (use.test) {
   executable("libtouchraw_test") {
     sources = [
+      "defragmenter_test.cc",
       "parser_test.cc",
       "reader_test.cc",
     ]
