heartd: Run heartd as SCHED_RR with priority 90
Heartd needs to have the higher priority so it can get resource to check
if other services have problems or not. We don't raise it to 99 priority
since we don't want to interfere daisydog process.

BUG=b:309049308
TEST=1. Deploy to DUT
     2. Check /proc/{pid}/sched
     3. It shows policy = 2 (SCHED_RR)

Change-Id: Ic27a71861a165c20006952709148feeecf899491
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5162827
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Reviewed-by: Florian Zubeil <zubeil@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/init/heartd.conf
+++ b/heartd/init/heartd.conf
@@ -14,4 +14,4 @@ respawn limit 3 10  # if the job respawns 3 times in 10 seconds, stop trying.
 oom score never
 
 # Run the daemon. It enters minijail in the daemon.
-exec /usr/bin/heartd
+exec chrt -r 90 /usr/bin/heartd
