heartd: Initialize mojo and register mojo interface
BUG=b:309049308
TEST=1. Deploy to DUT
     2. mojo_service_manager shows "Receive connection from:
	u:r:cros_heartd:s0"

Cq-Depend: chromium:5179207
Change-Id: Ice06cf72bfb22a6afa5caf26ed6a407fc45dd26e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5162828
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Reviewed-by: Florian Zubeil <zubeil@google.com>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -5,10 +5,17 @@
 import("//common-mk/pkg_config.gni")
 
 pkg_config("target_defaults") {
-  pkg_deps = [ "libbrillo" ]
+  pkg_deps = [
+    "libbrillo",
+    "mojo_service_manager",
+  ]
 }
 
 source_set("libheartd") {
-  sources = [ "heartd.cc" ]
+  sources = [
+    "heartd.cc",
+    "mojo_service.cc",
+  ]
   configs += [ ":target_defaults" ]
+  deps = [ "//heartd/mojom:libheartd_mojo_bindings" ]
 }
