--- a/heartd/BUILD.gn
+++ b/heartd/BUILD.gn
@@ -17,7 +17,10 @@ group("all") {
 executable("heartd") {
   sources = [ "main.cc" ]
   install_path = "bin"
-  pkg_deps = [ "libbrillo" ]
+  pkg_deps = [
+    "libbrillo",
+    "mojo_service_manager",
+  ]
   deps = [
     "//heartd/daemon:libheartd",
     "//heartd/minijail:libminijail",
