heartd: Implement pacemaker and heartbeat tracker class
This CL implements the pacemaker mojo interface inside the heartbeat
tracker class. In later CL, I'll create a heartbeat manager class to
hold/create/manage all heartbeat tracker objects. So we can complete the
service registration after that.

BUG=b:309049308
TEST=FEATURES=test emerge-brya heartd-tool
TEST=Test with other CLs

Change-Id: I390e557aa2ec7a20b9e42fab16d8df15ef975337
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5162829
Tested-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Reviewed-by: Florian Zubeil <zubeil@google.com>

--- a/heartd/BUILD.gn
+++ b/heartd/BUILD.gn
@@ -12,6 +12,10 @@ group("all") {
     ":install_seccomp_policy",
     ":install_tmpfiles_config",
   ]
+
+  if (use.test) {
+    deps += [ ":heartd_test" ]
+  }
 }
 
 executable("heartd") {
@@ -48,4 +52,14 @@ install_config("install_seccomp_policy") {
 install_config("install_tmpfiles_config") {
   sources = [ "tmpfiles.d/heartd.conf" ]
   install_path = "tmpfilesd"
+}
+
+if (use.test) {
+  executable("heartd_test") {
+    run_test = true
+    deps = [
+      "//common-mk/testrunner",
+      "//heartd/daemon:libheartd_test",
+    ]
+  }
 }
