heartd: Implement service registration
BUG=b:309049308
TEST=FEATURES=test emerge-brya heartd
TEST=(DUT) test with local build binary tool

Change-Id: Iafb9af811fe52c8897f776df086070ccb137dc9d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5162830
Reviewed-by: Florian Zubeil <zubeil@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -13,6 +13,7 @@ pkg_config("target_defaults") {
 
 source_set("libheartd") {
   sources = [
+    "heartbeat_manager.cc",
     "heartbeat_tracker.cc",
     "heartd.cc",
     "mojo_service.cc",
@@ -26,7 +27,10 @@ source_set("libheartd") {
 
 if (use.test) {
   source_set("libheartd_test") {
-    sources = [ "heartbeat_tracker_test.cc" ]
+    sources = [
+      "heartbeat_manager_test.cc",
+      "heartbeat_tracker_test.cc",
+    ]
     configs += [
       "//common-mk:test",
       ":target_defaults",
