heartd: Initial action runner back bone
Action runner is used to take action when heartbeat verification fails.

Currently there is nothing to test on this class, the unittest will be
added later.

BUG=b:309049308
TEST=FEATURES=test emerge-brya heartd

Change-Id: I70eb2c083396dd6d0d269e952235d96d72bfc4b6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5162832
Reviewed-by: Denny Huang <dennyh@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Florian Zubeil <zubeil@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -13,6 +13,7 @@ pkg_config("target_defaults") {
 
 source_set("libheartd") {
   sources = [
+    "action_runner.cc",
     "heartbeat_manager.cc",
     "heartbeat_tracker.cc",
     "heartd.cc",
