heartd: Implement normal reboot action
For normal reboot, we leverage powerd to do the reboot through D-Bus.

BUG=b:309049308
TEST=FEATURES=test emerge-brya heartd
TEST=1. Test with local modified code and tool
     2. Make sure heartd can reboot the device

Change-Id: I2a56bcdc4d40f8915b89a51e5d24bee668953b63
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5162834
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>
Reviewed-by: Florian Zubeil <zubeil@google.com>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -7,6 +7,7 @@ import("//common-mk/pkg_config.gni")
 pkg_config("target_defaults") {
   pkg_deps = [
     "libbrillo",
+    "libpower_manager-client",
     "mojo_service_manager",
   ]
 }
@@ -14,6 +15,7 @@ pkg_config("target_defaults") {
 source_set("libheartd") {
   sources = [
     "action_runner.cc",
+    "dbus_connector_impl.cc",
     "heartbeat_manager.cc",
     "heartbeat_tracker.cc",
     "heartd.cc",
@@ -28,7 +30,9 @@ source_set("libheartd") {
 
 if (use.test) {
   source_set("libheartd_test") {
+    pkg_deps = [ "libpower_manager-client-test" ]
     sources = [
+      "action_runner_test.cc",
       "heartbeat_manager_test.cc",
       "heartbeat_tracker_test.cc",
     ]
