resourced: Gather memory stats in resourced
Implement Platform.Memory.* UMA metrics reporting in resourced instead
of metrics. This is mostly just a reimplementation in rust, but it does
fix two bugs:

  - Properly account for lacros, instead of classifying all lacros
    processes as Browser type.
  - Classify all descendants of ARCVM's root crosvm as ARC processes,
    which properly classifies virgl_render_server.

BUG=b:319364562
TEST=cargo test

Change-Id: I73910272caa629590b7cb1217e70d5d781496b2e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5119469
Reviewed-by: Brian Geffon <bgeffon@chromium.org>
Reviewed-by: Shah Hossain <shahadath@google.com>
Commit-Queue: David Stevens <stevensd@chromium.org>
Tested-by: David Stevens <stevensd@chromium.org>
Reviewed-by: Shin Kawamura <kawasin@google.com>

--- a/resourced/Cargo.toml
+++ b/resourced/Cargo.toml
@@ -43,6 +43,9 @@ protobuf = "3.2"
 featured = { version = "0.1.0", optional = true }
 procfs = "0.15"
 
+[dev-dependencies]
+tempfile = "3"
+
 [dev-dependencies.tokio]
 features = ["test-util"]
 
