--- a/resourced/minijail/resourced.conf
+++ b/resourced/minijail/resourced.conf
@@ -47,6 +47,9 @@ bind-mount = /run/dbus
 # Need write access to /run/resourced for resourced configs.
 bind-mount = /run/resourced,,1
 
+# Need read access to containers.pid file.
+bind-mount = /run/containers
+
 # Get a writeable and empty /sys tmpfs path.
 mount = tmpfs,/sys,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
 
