runtime_probe: Add ComponentManifest and its reader
Add ComponentManifest and ComponentManifestReader to read component
manifest files.

BUG=b:297319195
TEST=unit test

Change-Id: Iaba8f851602faf0d1d43b0a82450b090028e2fc1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5118969
Tested-by: Kevin Lin <kevinptt@chromium.org>
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Commit-Queue: Kevin Lin <kevinptt@chromium.org>

--- a/runtime_probe/utils/BUILD.gn
+++ b/runtime_probe/utils/BUILD.gn
@@ -14,6 +14,7 @@ pkg_config("target_defaults") {
 source_set("utils") {
   sources = [
     "bus_utils.cc",
+    "ec_component_manifest.cc",
     "edid.cc",
     "file_utils.cc",
     "input_device.cc",
@@ -37,6 +38,7 @@ if (use.test) {
   source_set("test") {
     sources = [
       "bus_utils_test.cc",
+      "ec_component_manifest_test.cc",
       "file_test_utils_test.cc",
       "file_utils_test.cc",
       "function_test_utils_test.cc",
