--- a/shill/shims/wpa_supplicant.conf.in
+++ b/shill/shims/wpa_supplicant.conf.in
@@ -8,6 +8,28 @@ disable_scan_offload=1
 # have the required CMAC support.
 pmf=1
 sae_check_mfp=1
+
 # Configure P2P Interface MAC address policy by default.
 # use random MAC address on creating the interface.
 p2p_interface_random_mac_addr=1
+
+# p2p_go_ht40 - Default mode for HT40 enable when operating as GO.
+# This will take effect for p2p_group_add, p2p_connect, and p2p_invite.
+# Note that regulatory constraints and driver capabilities are
+# consulted anyway, so setting it to 1 can't do real harm.
+# By default: 0 (disabled)
+p2p_go_ht40=1
+
+# p2p_go_vht - Default mode for VHT enable when operating as GO
+# This will take effect for p2p_group_add, p2p_connect, and p2p_invite.
+# Note that regulatory constraints and driver capabilities are
+# consulted anyway, so setting it to 1 can't do real harm.
+# By default: 0 (disabled)
+p2p_go_vht=1
+
+# p2p_go_he - Default mode for 11ax HE enable when operating as GO
+# This will take effect for p2p_group_add, p2p_connect, and p2p_invite.
+# Note that regulatory constraints and driver capabilities are
+# consulted anyway, so setting it to 1 can't do real harm.
+# By default: 0 (disabled)
+p2p_go_he=1
