power: [Floss] Add FlossBatteryProvider skeleton to powerd
Previously, the generic BluetoothBatteryProvider only contained Bluez's
battery provider.

This change modifies BluetoothBatteryProvider to include Floss's
battery provider skeleton as well.

BUG=b:288135965
TEST=unit tests

Change-Id: Ia296c6e0a8b52eee11dcaf263d6958563da05fa6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5038779
Commit-Queue: Sarvesh Kalwit <sarveshkalwit@google.com>
Tested-by: Sarvesh Kalwit <sarveshkalwit@google.com>
Auto-Submit: Sarvesh Kalwit <sarveshkalwit@google.com>
Reviewed-by: Derek Basehore <dbasehore@google.com>

--- a/power_manager/BUILD.gn
+++ b/power_manager/BUILD.gn
@@ -194,6 +194,7 @@ static_library("libsystem") {
     "powerd/system/display/external_display.cc",
     "powerd/system/event_device.cc",
     "powerd/system/external_ambient_light_sensor_factory_mojo.cc",
+    "powerd/system/floss_battery_provider.cc",
     "powerd/system/input_watcher.cc",
     "powerd/system/internal_backlight.cc",
     "powerd/system/lockfile_checker.cc",
