power: [Floss] Add FlossBatteryProviderTest skeleton to powerd
This change adds a test skeleton for the FlossBatteryProvider class.

BUG=b:288135965
TEST=unit tests

Change-Id: I8d8a6e99646754686055adb30607b3c6eb950fc8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5136601
Auto-Submit: Sarvesh Kalwit <sarveshkalwit@google.com>
Commit-Queue: Sarvesh Kalwit <sarveshkalwit@google.com>
Tested-by: Sarvesh Kalwit <sarveshkalwit@google.com>
Reviewed-by: Derek Basehore <dbasehore@google.com>
Reviewed-by: Puthikorn Voravootivat <puthik@chromium.org>

--- a/power_manager/BUILD.gn
+++ b/power_manager/BUILD.gn
@@ -603,6 +603,7 @@ if (use.test) {
       "powerd/system/fake_proximity.cc",
       "powerd/system/fake_sensor_device.cc",
       "powerd/system/fake_sensor_service.cc",
+      "powerd/system/floss_battery_provider_test.cc",
       "powerd/system/input_watcher_test.cc",
       "powerd/system/internal_backlight_test.cc",
       "powerd/system/lockfile_checker_test.cc",
