Modify arc-ureadahead.conf script to match flag changes
Modify arc-ureadahead.conf script to match the changes to
ureadahead mode flag.

TESTS=locally
BUG=b:264585671

Change-Id: I1373ad902a5560db63f58b83c05f84d34f121456
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5137242
Commit-Queue: Jason Chen <jasondchen@google.com>
Reviewed-by: Alan Ding <alanding@chromium.org>
Tested-by: Alan Ding <alanding@chromium.org>
Reviewed-by: Yury Khmel <khmel@google.com>
Reviewed-by: Yury Khmel <khmel@chromium.org>

--- a/arc/container/scripts/arc-ureadahead.conf
+++ b/arc/container/scripts/arc-ureadahead.conf
@@ -24,15 +24,19 @@ script
     set -x
 
     # Read-ahead files in the image.
-    if [ "${DISABLE_UREADAHEAD}" = "1" ]; then
-      logger -t "${UPSTART_JOB}" "Ureadahead is disabled"
-    else
+    if [ "${HOST_UREADAHEAD_MODE}" = "DISABLED" ]; then
+      logger -t "${UPSTART_JOB}" "Ureadahead is disabled."
+    elif [ "${HOST_UREADAHEAD_MODE}" = "GENERATE" ]; then
+      logger -t "${UPSTART_JOB}" "Ureadahead is in generate mode."
+    elif [ "${HOST_UREADAHEAD_MODE}" = "DEFAULT" ]; then
       if [ -f "${PACK}" ]; then
-        ureadahead --pack-file="${PACK}" || \
-            echo "Failed to start ureadahead pack for ${PACK}"
+        ureadahead --pack-file="${PACK}" ||
+        echo "Failed to start ureadahead pack for ${PACK}"
       else
         echo "ureadahead pack is not available at ${PACK}"
       fi
+    else
+      echo "ureadahead mode is invalid ${HOST_UREADAHEAD_MODE}"
     fi
   } 2>&1 | logger -t "${UPSTART_JOB}"
 end script
