vm_tools: refvm: Update to trixie
Update virtio_wl with latest code from chromeos kernel 6.6 and bump the
build to trixie.

BUG=b:317155011
TEST=build.py
TEST=tast run <DUT> bruschetta.*

Change-Id: I8b139553ade40a7e6a22db1023bd4f514fb0b120
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5138841
Reviewed-by: Emil Mikulic <easy@google.com>
Commit-Queue: James Ye <jamesye@google.com>
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/vm_tools/reference_vm/kokoro/build_image.cfg
+++ b/vm_tools/reference_vm/kokoro/build_image.cfg
@@ -16,3 +16,4 @@ action {
 
 gfile_resources: "/x20/teams/chromeos-vm/bin/fai-setup-storage_5.10.3ubuntu1_all.deb"
 gfile_resources: "/x20/teams/chromeos-vm/bin/debian-archive-keyring_2023.3ubuntu1_all.deb"
+gfile_resources: "/x20/teams/chromeos-vm/bin/debootstrap_1.0.126+nmu1ubuntu0.5_all.deb"
