chaps: Implement kChapsKeyWrapMechanism for WrapKey/UnwrapKey
kChapsKeyWrapMechanism is a chaps-specific wrap/unwrap mechanism used to
enable moving a key object between chaps tokens(specifically from
system-token to user-token) without leaking the target key outside chaps.
A corresponding kChapsWrappableAttribute attribute is added to identify
keys that can be wrapped by this mechanism.

The mechanism design is mainly referencing the PKCS
"CKM_RSA_AES_KEY_WRAP" mechanism (see go/barca-chaps-dd for more
details).

BUG=b:302344735
TEST=chaps unit tests

Change-Id: I7ee7615d33de9a9b76c3a768d09b9fc3abe8cdb5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5187778
Tested-by: Sam Chen <chensa@google.com>
Reviewed-by: Yi Chou <yich@google.com>
Commit-Queue: Sam Chen <chensa@google.com>

--- a/system_api/BUILD.gn
+++ b/system_api/BUILD.gn
@@ -355,6 +355,7 @@ proto_library("system_api-chaps-protos") {
   proto_out_dir = "include/chaps/proto_bindings"
   sources = [
     "${proto_in_dir}/attributes.proto",
+    "${proto_in_dir}/chaps_wrapped_key_info.proto",
     "${proto_in_dir}/ck_structs.proto",
     "${proto_in_dir}/key_permissions.proto",
   ]
