libhwsec-foundation: Make sure hwsec daemons shutdown correctly
Send the signals multiple times, because if we try to shutdown the
system in the startup stage, some daemons may start after we send the
signals. We should make sure we shuddown all daemons stopped correctly
before the process_killer involved.

BUG=b:315742907
TEST=CQ

Change-Id: I4aa4f3d7d70ff9b7ea43651f257b64ffe83968c2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5151751
Tested-by: Yi Chou <yich@google.com>
Reviewed-by: Ching-Kang Yen <chingkang@chromium.org>
Commit-Queue: Yi Chou <yich@google.com>

--- a/libhwsec-foundation/init/hwsec-shutdown-signals.conf
+++ b/libhwsec-foundation/init/hwsec-shutdown-signals.conf
@@ -7,10 +7,18 @@ author          "chromium-os-dev@chromium.org"
 
 start on stopping boot-services
 
+oom score -100
+
 task
 
 script
+  # Send the signals multiple times, because if we try to shutdown the
+  # system in the startup stage, some daemons may start after we send the
+  # signals. We should make sure we shutdown all daemons correctly before
+  # the process_killer involved.
+  for _ in {1..10}; do
     initctl emit hwsec-stop-clients-signal
     initctl emit hwsec-stop-tpm_manager-signal
     initctl emit hwsec-stop-low-level-tpm-daemon-signal
+  done
 end script
