dns-proxy: switch resolver to use net_base::Socket
This CL replaces patchpanel::Socket to net_base::Socket at resolver.

BUG=b:317751088
TEST=FEATURES=test emerge-brya dns-proxy

Change-Id: I7689eadca5e3352e9e799d0fc537c065730830e7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5149235
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/dns-proxy/BUILD.gn
+++ b/dns-proxy/BUILD.gn
@@ -167,6 +167,7 @@ if (use.test) {
     deps = [
       ":libdnsproxy",
       "//common-mk/testrunner:testrunner",
+      "//net-base:net_base_test_support",
     ]
   }
 }
