policy_utils: Move install logic to GN
This is part of a two CL change which migrates install logic from ebuild
to gn.

BUG=chromium:1184602
TEST=USE=”test” emerge-zork chromeos-base/policy_utils
TEST=confirm installed files unchanged by: equery-zork f
chromeos-base/policy_utils

Cq-Depend: chromium:5148379
Change-Id: I6a87633921034125c85f017877ec4e711fc60720
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5148380
Reviewed-by: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Commit-Queue: William Mahon <wmahon@google.com>
Tested-by: William Mahon <wmahon@google.com>

--- a/policy_utils/BUILD.gn
+++ b/policy_utils/BUILD.gn
@@ -30,6 +30,7 @@ executable("policy") {
   ]
   configs += [ ":target_defaults" ]
   deps = [ ":libmgmt" ]
+  install_path = "sbin"
 }
 
 if (use.test) {
